# ai-data-recovery

./: .gitignore  GITHUB-ACTIONS-GUIDE.md  README.md  SKILL.md  ai-data-recovery.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
core/: researched_disk_recovery.py
gui/: comprehensive_disk_recovery.py  finaldata_style_gui.py  gui_main.py
references/: api-examples.md  gui-design.md  windows-gui-guide.md  workflow-review.md
tests/: test_api.py  test_integration.py
utils/: ai_repair.py  build_windows.bat  build_with_eula.py  eula_display.py  generate_eula_pdf.py
windows/: EULA-TW.md  GITHUB-TOKEN-GUIDE.md  README.md  build_exe.sh  build_with_docker.sh  complete_setup.sh  gh_setup.sh
